--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;"><br /></SPAN></FONT></DIV>
 <div><span STYLE="white-space: pre-wrap;"><u>例3</U></SPAN></DIV>
 <div>
-<div STYLE=""><span STYLE="white-space: pre-wrap;">echo 1 | tee 1.txt</SPAN></DIV>
+<div><font FACE="Arial"><span STYLE="white-space: pre-wrap; background-color: rgb(240, 240, 240);">echo 1 | tee 1.txt</SPAN></FONT></DIV>
 </DIV>
 <div><span STYLE="white-space: pre-wrap;">标准输出也显示，同时也出力到文件</SPAN></DIV>
 <div><span STYLE="white-space: pre-wrap;"><br /></SPAN></DIV>							
