--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;">文件描述符与重定向符号之间不能有空格。</SPAN></FONT></DIV>
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;"><br /></SPAN></FONT></DIV>
 <div><br /></DIV>
-<div><font FACE="Arial"><span STYLE="white-space: pre-wrap;"><b><u>Linux 的特殊文件
-/dev/null</U></B></SPAN></FONT></DIV>
+<div><font FACE="Arial"><span STYLE="white-space: pre-wrap;"><b><u>Linux 的特殊文件 /dev/null</U></B></SPAN></FONT></DIV>
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;">/dev/null，或称空设备，是一个特殊的设备文件，它丢弃一切写入其中的数据（但报告写入操作成功），读取它则会立即得到一个EOF。</SPAN></FONT></DIV>
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;">Unix中，/dev/null 被称为位桶(bit bucket)或者黑洞(black hole)。</SPAN></FONT></DIV>
 <div><font FACE="Arial"><span STYLE="white-space: pre-wrap;">空设备通常被用于丢弃不需要的输出流，或作为用于输入流的空文件。</SPAN></FONT></DIV>
